# NDPI-to-DZI

./: LICENSE  README.md  ndpi_to_dzi.py  pyproject.toml
