[project]
name = "ndpi2dzi"
version = "0.1.0"
description = "NDPI to DZI image converter using pyvips"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Benedikt Willi" }]
dependencies = [
    "click",
    "pyvips",
]

[project.scripts]
ndpi2dzi = "ndpi_to_dzi:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ndpi_to_dzi.py"]
